[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/Retro Gaming.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/Minigames/Maze/Fork_lift.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Objects/Clipboard.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Minigames/Maze/Parking.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Minigames/Maze.gd" type="Script" id=5]
[ext_resource path="res://assets/Minigames/GreenTile.png" type="Texture" id=6]
[ext_resource path="res://assets/Minigames/ContainerTile.png" type="Texture" id=9]
[ext_resource path="res://assets/Background/Maze.png" type="Texture" id=10]
[ext_resource path="res://assets/Box.png" type="Texture" id=11]

[sub_resource type="CanvasItemMaterial" id=4]

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="StreamTexture" id=13]
flags = 4
load_path = "res://.import/Box.png-7ddde33a7ad93770c050f8e72a057b52.stex"

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=8]
0/name = "box.png 0"
0/texture = SubResource( 13 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 96, 32, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 5 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
3/name = "contêiner.2.png 3"
3/texture = ExtResource( 9 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 320, 32, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 10 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "contêiner (4).png 4"
4/texture = ExtResource( 9 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 11 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
6/name = "green Unipar.png 6"
6/texture = ExtResource( 6 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 32, 32, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 14 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=16]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=17]

[sub_resource type="DynamicFont" id=18]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=24]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StreamTexture" id=25]
flags = 4

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 625, 359.5 )
scale = Vector2( 1.74095, 1.81186 )
texture = ExtResource( 10 )

[node name="TileMap" type="TileMap" parent="."]
material = SubResource( 4 )
position = Vector2( 16, 27 )
tile_set = SubResource( 8 )
cell_quadrant_size = 64
collision_layer = 2
collision_mask = 2
format = 1
tile_data = PoolIntArray( -1, 3, 0, -65536, 3, 0, -65535, 3, 0, -65534, 3, 0, -65533, 3, 0, -65532, 3, 0, -65531, 3, 0, -65530, 3, 0, -65529, 3, 0, -65528, 3, 0, -65527, 3, 0, -65526, 3, 0, -65525, 3, 0, -65524, 3, 0, -65523, 3, 0, -65522, 3, 0, -65521, 3, 0, -65520, 3, 0, -65519, 3, 0, -65518, 3, 0, -65517, 3, 0, 65535, 3, 0, 9, 4, 0, 17, 7, 0, 19, 3, 0, 131071, 3, 0, 65539, 6, 0, 65542, 6, 0, 65544, 6, 0, 65547, 6, 0, 65549, 6, 0, 65550, 4, 0, 65552, 4, 0, 65555, 3, 0, 196607, 3, 0, 131072, 4, 0, 131074, 4, 0, 131075, 6, 0, 131078, 6, 0, 131080, 6, 0, 131081, 6, 0, 131083, 6, 0, 131087, 4, 0, 131088, 4, 0, 131089, 4, 0, 131090, 4, 0, 131091, 3, 0, 262143, 3, 0, 196610, 4, 0, 196611, 6, 0, 196614, 6, 0, 196616, 6, 0, 196618, 6, 0, 196619, 6, 0, 196621, 6, 0, 196627, 3, 0, 327679, 3, 0, 262145, 4, 0, 262147, 6, 0, 262148, 6, 0, 262149, 6, 0, 262150, 6, 0, 262152, 6, 0, 262155, 6, 0, 262156, 4, 0, 262157, 6, 0, 262158, 4, 0, 262159, 4, 0, 262160, 4, 0, 262161, 4, 0, 262163, 3, 0, 393215, 3, 0, 327684, 4, 0, 327697, 4, 0, 327699, 3, 0, 458751, 3, 0, 393218, 6, 0, 393219, 6, 0, 393220, 6, 0, 393221, 6, 0, 393223, 6, 0, 393224, 6, 0, 393225, 6, 0, 393226, 6, 0, 393228, 6, 0, 393229, 6, 0, 393230, 6, 0, 393231, 6, 0, 393233, 4, 0, 393235, 3, 0, 524287, 3, 0, 458754, 6, 0, 458757, 6, 0, 458759, 6, 0, 458762, 6, 0, 458764, 6, 0, 458767, 6, 0, 458771, 3, 0, 589823, 3, 0, 524289, 4, 0, 524290, 6, 0, 524291, 6, 0, 524292, 6, 0, 524293, 6, 0, 524294, 4, 0, 524295, 6, 0, 524296, 6, 0, 524297, 6, 0, 524298, 6, 0, 524300, 6, 0, 524301, 6, 0, 524302, 6, 0, 524305, 4, 0, 524307, 3, 0, 655359, 3, 0, 589826, 6, 0, 589831, 6, 0, 589834, 6, 0, 589835, 4, 0, 589836, 6, 0, 589839, 6, 0, 589841, 4, 0, 589843, 3, 0, 720895, 3, 0, 655360, 3, 0, 655361, 3, 0, 655362, 3, 0, 655363, 3, 0, 655364, 3, 0, 655365, 3, 0, 655366, 3, 0, 655367, 3, 0, 655368, 3, 0, 655369, 3, 0, 655370, 3, 0, 655371, 3, 0, 655372, 3, 0, 655373, 3, 0, 655374, 3, 0, 655375, 3, 0, 655376, 3, 0, 655377, 3, 0, 655378, 3, 0, 655379, 3, 0 )

[node name="Label" type="Label" parent="."]
margin_left = 1068.0
margin_top = -16.0
margin_right = 1260.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
text = "Estacione aqui"
align = 1
valign = 1

[node name="Parking" parent="." instance=ExtResource( 4 )]
position = Vector2( 613, -316 )
collision_layer = 2
collision_mask = 2

[node name="Forklift" parent="." instance=ExtResource( 2 )]
position = Vector2( 146, 448 )
collision_layer = 2
collision_mask = 2

[node name="WinScreen" type="Panel" parent="."]
visible = false
margin_left = 247.0
margin_top = 134.0
margin_right = 996.0
margin_bottom = 586.0

[node name="NinePatchRect" type="NinePatchRect" parent="WinScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -399.5
margin_top = -235.0
margin_right = 388.5
margin_bottom = 234.0
texture = ExtResource( 11 )
patch_margin_left = 15
patch_margin_top = 10
patch_margin_right = 20
patch_margin_bottom = 13

[node name="win" type="Label" parent="WinScreen"]
margin_left = 80.0
margin_top = 75.0
margin_right = 686.0
margin_bottom = 181.0
custom_fonts/font = SubResource( 16 )
text = "Você venceu!"
align = 1
valign = 1

[node name="continueButton" type="Button" parent="WinScreen"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 7.0
margin_top = 34.0
margin_right = -37.0
margin_bottom = 79.0
theme = SubResource( 17 )
custom_colors/font_color_focus = Color( 0.0588235, 0.937255, 0.105882, 1 )
custom_colors/font_color = Color( 0.988235, 0.984314, 0.984314, 1 )
custom_colors/font_color_hover = Color( 0.0588235, 0.937255, 0.105882, 1 )
custom_colors/font_color_pressed = Color( 0.94902, 0.976471, 0.0392157, 1 )
custom_fonts/font = SubResource( 18 )
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 20 )
custom_styles/focus = SubResource( 21 )
custom_styles/normal = SubResource( 22 )
text = "Continuar"

[node name="Clipboard" parent="." instance=ExtResource( 3 )]
margin_left = 878.0
margin_top = 603.0
margin_right = 1282.0
margin_bottom = 1203.0

[node name="RichTextLabel" type="RichTextLabel" parent="Clipboard"]
anchor_right = 0.099
anchor_bottom = 0.033
margin_left = 76.0
margin_top = 206.0
margin_right = 301.004
margin_bottom = 402.2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 24 )
text = "Controlando a empilhadeira, descubra qual caminho seguir para chegar ao local indicado e estacioná-la."

[node name="TextureRect" type="TextureRect" parent="Clipboard"]
margin_left = 125.0
margin_top = 404.0
margin_right = 274.0
margin_bottom = 504.0
texture = SubResource( 25 )
expand = true

[connection signal="body_entered" from="Parking" to="." method="_on_Parking_body_entered"]
[connection signal="pressed" from="WinScreen/continueButton" to="." method="_on_continueButton_pressed"]
